# data_partioning_cmp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  concurrent_output  concurrent_output.cpp  concurrent_output2  concurrent_output2.cpp  concurrent_output_affinity.cpp  concurrent_results.csv  concurrent_results2.csv  independent_output  independent_output.cpp  plot_graphs.py  run.sh  run_concurrent.sh  run_concurrent_no_perf.sh  running_experiments.md
concurrent_output_met/: Makefile  concurrent_output.cpp  plot_cache_misses.py  plot_context_switches.py  plot_results.py  run_and_plot.sh
independent_output_met/: Makefile  independent_output.cpp  plot_cycles.py  plot_page_faults.py  plot_results.py  plot_tlb_misses.py  run_and_plot.sh
independent_output_prj/: Makefile  independent_output.cpp  plot_results.py  run_and_plot.sh
no_affinity_results/affinity_results/: concurrent_crossnuma_1.csv  concurrent_crossnuma_16.csv  concurrent_crossnuma_2.csv  concurrent_crossnuma_4.csv  concurrent_crossnuma_8.csv  concurrent_node0_adjacent_1.csv  concurrent_node0_adjacent_16.csv  concurrent_node0_adjacent_2.csv  concurrent_node0_adjacent_4.csv  concurrent_node0_adjacent_8.csv  concurrent_node0_alternating_1.csv  concurrent_node0_alternating_2.csv  concurrent_node0_alternating_4.csv  concurrent_node0_alternating_8.csv  concurrent_node1_adjacent_1.csv  concurrent_node1_adjacent_16.csv  concurrent_node1_adjacent_2.csv  concurrent_node1_adjacent_4.csv  concurrent_node1_adjacent_8.csv  concurrent_node1_alternating_1.csv  (+14 more)
